feat: Enhance complaint submission process with idempotency and attachment handling
- Added support for submission idempotency in ComplaintRepository to prevent duplicate complaints.
- Introduced ComplaintMutator to encapsulate status and lifecycle changes for complaints.
- Updated AttachmentService to handle attachment staging and promotion after transaction commits.
- Implemented AttachmentsStoredEvent to signal when attachments are staged for promotion.
- Enhanced ComplaintSubmissionTemplate to validate submissions and manage attachments more effectively.
- Created OutboxMessage and OutboxPublisher to manage transactional outbox for event publishing.
- Added database migration for outbox messages and submission idempotency key.
- Improved error handling and logging throughout the attachment and submission processes.